Address code review feedback - improve security configurations
Co-authored-by: Sahilarora2165 <113533032+Sahilarora2165@users.noreply.github.com>